# goodnight-mouse

./: .gitignore  LICENSE  Makefile  README.md  meson.build  meson_options.txt
src/: app.c  app.h  config.c  config.h  log.c  log.h  main.c  meson.build
src/app/: app.c  app.h  app_config.c  app_config.h  meson.build
src/app/actions/: actions.c  actions.h  interaction.c  interaction.h
src/app/background/: background.c  background.h  background_config.c  background_config.h  meson.build
src/app/controller/: cache.c  cache.h  control.c  control.h  controller.c  controller.h  execution.h  identify.c  identify.h
src/app/focus/: focus.c  focus.h  window.c  window.h
src/app/foreground/: codes.c  codes.h  codes_config.c  codes_config.h  control.c  control.h  execution.c  execution.h  executor.c  executor.h  focus.h  foreground.c  foreground.h  foreground_config.c  foreground_config.h  identify.c  identify.h  meson.build  overlay.c  overlay.h  overlay_config.c  overlay_config.h  registry.c  registry.h  styler.c  styler.h  tag.c  tag.h  tag_config.c  tag_config.h  window.h
src/app/input/: event.h  input.c  input.h  modifiers.c  modifiers.h  subscriber.c  subscriber.h  timeout.c
src/app/lib/: emulator.h  focus.c  focus.h  keyboard.c  keyboard.h  keymap.c  keymap.h  meson.build  pointer.c  pointer.h  state.h  timeout.h  timer.c
src/app/lib/backend/: backend.h  common.h  meson.build  pointer.h  state.h
src/app/lib/emulator/: emulator.c  emulator.h
src/app/lib/focus/: event.h  (+8 more)
src/background/: background.c  background.h
src/foreground/: foreground.c  foreground.h
src/input/: input.c  input.h  modifiers.c  modifiers.h  timeout.h
src/utils/: modifiers.h  timeout.c
(+211 files in other folders)
