project_source_files += files(
    'codes_config.c',
    'codes.c',
    'executor.c',
    'foreground_config.c',
    'foreground.c',
    'identify.c',
    'overlay_config.c',
    'overlay.c',
    'registry.c',
    'styler.c',
    'tag_config.c',
    'tag.c',
)

project_dependencies += [
    dependency('gsl'),
]
